--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         </div>
     </div>
 
-    <iframe name="myfram" src="" frameborder="0"></iframe>
+    <iframe name="myfram" src="experince.bmp" frameborder="0"></iframe>
 
 
 </body>
+
 
 </html>
