--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </div>
     </div>
 
-    <iframe name="myfram" src="experince.bmp" frameborder="0"></iframe>
+    <iframe name="myfram" src="experince.BMP" frameborder="0"></iframe>
 
 
 </body>
 
 
 </html>
+
